--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "### By: Fredy Laksmono ### Last update: 10/19/2022",
   "main": "index.js",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "cd fl-war-frontend && rm -rf build && npm install && npm run build"
   },
   "repository": {
     "type": "git",
